--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "facebook-messenger-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "messenger-bot",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "bot-dev": "bottender dev",
+    "bot-start": "bottender start",
+    "server-dev": "nodemon server.js",
+    "server-start": "node server.js",
+    "lint": "eslint . ",
+    "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Tanmay17/Facebook-Messenger-Bot.git"
-  },
-  "author": "Tanmay Srivastava",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Tanmay17/Facebook-Messenger-Bot/issues"
-  },
-  "homepage": "https://github.com/Tanmay17/Facebook-Messenger-Bot#readme"
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "bottender": "1.4.6",
+    "eslint": "7.1.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.3",
+    "express": "^4.17.1",
+    "jest": "26.0.1",
+    "moment": "^2.26.0",
+    "mongodb": "^3.5.8",
+    "nodemon": "^2.0.4",
+    "prettier": "2.0.5"
+  }
 }
