--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.3",
     "express": "^4.17.1",
+    "express-validator": "^6.14.0",
     "jest": "26.0.1",
     "moment": "^2.26.0",
     "mongodb": "^3.5.8",
+    "mongoose": "^6.2.3",
     "nodemon": "^2.0.4",
     "prettier": "2.0.5"
   }
